--- a/style1.css
+++ b/style1.css
@@ -106,6 +106,11 @@ html, body{
 
     transform: translate(-50%, -50%); */
 }
+#login-form{
+    height: 90%;
+    width: 100%;
+    ; 
+}
 #user-login{
     height: 90%;
     width: 100%;
@@ -115,7 +120,7 @@ html, body{
     /* background-color: goldenrod; */
 }
 .id-pass{
-    height: 25%;
+    height: 35%;
     width: 90%;
     margin-left: 5%;
     margin-right: 5%;
@@ -135,7 +140,7 @@ html, body{
 }
 .id-pass input{
     color: rgb(0, 0, 0);
-    box-shadow: 0 2px 10px rgba(3, 231, 247, 0.748);
+    box-shadow: 0 2px 10px rgba(16, 19, 19, 0.748);
     background: none;
     border: transparent; 
     border-bottom: 1px solid black;
@@ -146,6 +151,7 @@ input{
     gap: 10px;
     border-radius: 3px;
     padding: 2px;
+    
     border-color: rgba(0, 0, 0, 0.348);
 }
 /*#pass label{
@@ -160,7 +166,7 @@ a{
     text-align: end;
 }
 #button{
-    height: 10%;
+    height: 15%;
     width: 100%;
     display: flex;
     align-items: center;
@@ -178,11 +184,11 @@ button{
     border-color: rgba(0, 0, 0, 0.205);
 }
 #register{
-    height: 10%;
+    height: 15%;
     width: 100%;
     gap: 4px;
     /* background-color: greenyellow; */
-    font-size: 15px;
+    font-size: 18px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -219,10 +225,11 @@ button{
 }
 
 
+
 /* ****************************Resgistration Form********************************** */
 #registrationForm{
     height: 100%;
-    width: 50%;
+    width: 50vw;
     display: none;
     /* margin-left: 8%; */
     color: rgb(0, 0, 0);
@@ -331,23 +338,37 @@ button{
      margin-right: 5%;
      overflow: hidden;
      /* position: absolute; */
-     box-shadow: 0 2px 10px rgba(95, 222, 236, 0.698);
+     box-shadow: 0 2px 10px rgb(20, 13, 13);
      /* display: flex; */
      /* background-color: purple; */
 }
+#Registration-Form{
+    height: 97%;
+    width: 100%;
+    border-radius: 5px;
+ 
+    /* overflow: hidden; */
+    /* position: absolute; */
+    /* box-shadow: 0 2px 10px rgba(95, 222, 236, 0.698); */
+    /* display: flex; */
+    /* background-color: purple; */
+}
 #personal-details{
+    
     height: 10%;
     width: 100%;
-    padding: 5px;
+    padding:5px 5px 5px 20px;
+   
     gap: 5px;
     color: white;
     background-color: rgba(165, 42, 42, 0.848);
 }
 .detail{
+    margin-left: 20px;
     height: 10%;
     width: 100%;
     padding-left: 4px;
-    overflow: hidden;
+    /* overflow: hidden;     */
     line-height: 160%;
     flex-direction: column;
     display: flex;
@@ -355,6 +376,7 @@ button{
     /* background-color: orange; */
 }
 .detail input{
+    
     height: 35%;
     width: 50%;
     border-radius: 4px;
@@ -379,19 +401,24 @@ button{
 }
 
 #btn{
-    height: 60%;
+    /* margin-top: 5px; */
+    height: 100%;
     width: 100%;
     display: flex;
     align-items: baseline;
     justify-content: center;
-    overflow: hidden;
+    /* overflow: hidden; */
     /* background-color: red; */
 }
-#btn button{
+#btn #submit{
     height: 90%;
+    background-color: brown;
     width: 30%;
+    color: white;
+    font-weight: 500;
+    margin-top:5px;
     border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(255, 1, 1, 0.985)
+    box-shadow: 0 2px 10px rgba(3, 3, 3, 0.985)
 }
 @media (max-width: 780px){
     #homePage{
