--- a/style1.css
+++ b/style1.css
@@ -19,6 +19,8 @@ html, body{
     height: 53vw;
     width: 85vw;
     /* display: flex; */
+    /* border: 2px solid black; */
+    box-shadow: 0 2px 10px rgb(0, 0, 0);
     align-items: center;
     position: absolute;
     top: 50%;
@@ -31,6 +33,7 @@ html, body{
     width: 100%;
     padding-right: 9px;
     padding-left: 5px;
+    border: 1px solid black;
     display: flex;
     align-items: center;
     justify-content: space-between;
