--- a/style1.css
+++ b/style1.css
@@ -149,6 +149,9 @@ html, body{
     justify-content: center;
     /* background-color: orange; */
 }
+#user-login input{
+    margin-top: 10px;
+}
 .id-pass i{
     color: red;
     font-size: 7px;
@@ -156,13 +159,19 @@ html, body{
 }
 .id-pass input{
     color: rgb(0, 0, 0);
-    box-shadow: 0 2px 10px rgba(3, 231, 247, 0.748);
+    box-shadow: 0 2px 10px rgba(12, 12, 12, 0.748);
     background: none;
     border: transparent; 
     border-bottom: 1px solid black;
 }
-
+#user-login #login-id[type="text"]{
+padding: 10px 40px;
+}
+#user-login #password[type="password"]{
+    padding: 10px 40px;
+    }
 input{
+
     height: 31%;
     gap: 10px;
     border-radius: 3px;
@@ -198,6 +207,8 @@ button{
     color: white;
     cursor: pointer;
     border-color: rgba(0, 0, 0, 0.205);
+    font-weight: 600;
+    font-size: 18px;
 }
 #register{
     height: 10%;
@@ -353,20 +364,33 @@ button{
      margin-right: 5%;
      overflow: hidden;
      /* position: absolute; */
-     box-shadow: 0 2px 10px rgba(95, 222, 236, 0.698);
+     box-shadow: 0 2px 10px rgba(2, 2, 2, 0.698);
      /* display: flex; */
      /* background-color: purple; */
+
+}
+form{
+    height: 95%;
+}
+#rgsubmit{
+    height: 100%;
+    background-color: brown;
+    color: white;
+    font-weight: 600;
+    box-shadow: 2px 2px 5px rgb(16, 15, 15);
 }
 #personal-details{
     height: 10%;
     width: 100%;
-    padding: 5px;
+    padding: 5px 5px 5px 25px;
     gap: 5px;
     color: white;
     background-color: rgba(165, 42, 42, 0.848);
 }
 .detail{
-    height: 10%;
+    margin-left: 20px;
+
+    height: 10.5%;
     width: 100%;
     padding-left: 4px;
     overflow: hidden;
