--- a/style1.css
+++ b/style1.css
@@ -362,22 +362,27 @@ button{
      border-radius: 5px;
      margin-left: 5%;
      margin-right: 5%;
-     overflow: hidden;
+     overflow-x: hidden;
      /* position: absolute; */
      box-shadow: 0 2px 10px rgba(2, 2, 2, 0.698);
      /* display: flex; */
      /* background-color: purple; */
 
 }
-form{
-    height: 95%;
+#reg-Form{
+    height: 110%;
+}
+#note{
+    height:5vw;
 }
 #rgsubmit{
-    height: 100%;
+    
+    height: 80%;
     background-color: brown;
     color: white;
     font-weight: 600;
     box-shadow: 2px 2px 5px rgb(16, 15, 15);
+    font-size: 0.8vw;
 }
 #personal-details{
     height: 10%;
@@ -418,13 +423,16 @@ form{
     height: 19%;
 }
 
-
+#login-Form{
+    height: 100%;
+}
 
 #note p{
     color: red;
 }
 
 #btn{
+    margin-top: 0.5vw;
     height: 60%;
     width: 100%;
     display: flex;
@@ -434,6 +442,7 @@ form{
     /* background-color: red; */
 }
 #btn button{
+
     height: 90%;
     width: 30%;
     border-radius: 5px;
