--- a/style2.css
+++ b/style2.css
@@ -9,8 +9,8 @@ html, body{
     /* background-color: red; */
 }
 #userPage{
-    height: 80vh;
-    width: 80vw;
+    height: 100%;
+    width: 100%;
     overflow: hidden;
     display: flex;
     border: 1px solid black;
@@ -19,28 +19,32 @@ html, body{
     left: 50%;
     transform: translate(-50%, -50%);
     box-shadow: 0 2px 10px rgba(2, 2, 2, 0.698);
+    
     /* background-color: rgba(0, 0, 255, 0.342); */
 }
 #user-info{
     height: 100%;
-    width: 30%;
+    width: 25%;
     color: white;
+    border-top-right-radius: 50px;
     /* border-right: 2px solid brown; */
-    box-shadow: 0 2px 10px rgba(2, 2, 2, 0.698);
-    background-color: rgba(0, 0, 0, 0.746);
+    box-shadow: 0 20px 80px rgba(2, 2, 2, 0.698);
+    /* background-color: rgba(0, 0, 0, 0.746); */
 
 }
 #user-profile{
     height: 30%;
     width: 100%;
     padding: 5px;
+    border-top-right-radius: 60px;
+    /* border-bottom-left-radius: 90px; */
     /* border-bottom: 2px solid brown; */
     overflow: hidden;
     flex-direction: column;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background-color: rgba(0, 0, 0, 0.224);
+    background-color: brown;
 
 
     
@@ -57,18 +61,21 @@ html, body{
 #user-profile-list{
     height: 70%;
     width: 100%;
-    /* background-color: paleturquoise; */
+
+    background-color: white;
 }
 
 
 #user-panel{
     height: 100%;
-    width: 70%;
+    width: 80%;
     /* background-color: purple; */
 }
 #categories{
     height: 13%;
     width: 100%;
+    color: white;
+    border-top-left-radius: 10px;
     /* margin-right: 10px; */
     padding-left: 6px;
     border-bottom: 2px solid brown;
@@ -76,7 +83,7 @@ html, body{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    /* background-color: gold; */
+    background-color: rgba(0, 0, 0, 0.686);
 }
 #menu{
     font-size: 30px;
@@ -97,17 +104,21 @@ html, body{
 .list{
     height: 20%;
     width: 100%;
-    padding-left: 25px;
-    font-size: 20px;
+    color: black;
+    /* border-bottom: 1px solid brown; */
+    
+    /* padding-left: 25px; */
+    font-size: 22px;
     /* margin: 1px; */
     display: flex;
     align-items: center;
+    justify-content: center;
     margin: 1px;
-    /* background-color: hotpink; */
+    background-color: rgba(0, 0, 0, 0.09);
 }
 .user-boxes{
-    height: 60%;
-    width: 27%;
+    height: 70%;
+    width: 37%;
     margin: 1px;
     border-radius: 4px;
     transition: all 0.3s;
@@ -128,30 +139,31 @@ html, body{
     width: 90%;
     cursor: pointer;
 }
-#user-box-div2{
+#user-box-div2{ 
     height: 38%;
     width: 100%;
     /* margin-right: 1px; */
     /* background-color: green; */
-    padding-left: 20px;
+    padding-left: 60px;
     flex-direction: column;
     display: flex;
     align-items: first baseline;
     justify-content: space-between;
 }
 #user-box-div2 .user-boxes{
-    height: 73%;
-    width: 29%;
+    height: 80%;
+    width: 40%;
 }
 #result-date{
     height: 15%;
     width: 100%;
     
+    margin-left: 2px;
     padding-right: 8px;
     position: relative;
     text-align: end;
     
 
-    background-color: white;
+    background-color: rgba(255, 255, 255, 0);
     box-shadow: 0 2px 10px rgba(2, 2, 2, 0.698);
 }
